cambio de numbre

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="code.js"></script>
 </head>
 <body>
-    <h2>Hola ke asesss</h2>
+    <h2>Julio</h2>
+    <h3>Lucila</h3>
 </body>
 </html>
 
