corregido el nombre de archivo code por error

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprende web</title>
     <link rel="stylesheet" href="style.css">
-    <script src="code.js"></script>
+    <script src="codigo.js"></script>
 </head>
 <body>
     <h2>Julio</h2>
-    <h3>Lucila</h3>
+    <h3>Leonardo</h3>
 </body>
 </html>
 
